# solana-escrow

./: README.md
program/: .gitignore  Cargo.toml
program/src/: entrypoint.rs  error.rs  instructions.rs  lib.rs  processor.rs  state.rs
ui/src/util/: initEscrow.ts
